# OctogonalChecker

./: Cargo.toml  ReadMe.html  ReadMe.md  index.html
octo_board_plugin/: Cargo.toml
octo_board_plugin/src/: game_plugin.rs  lib.rs
octo_board_plugin/src/components/: maybe.rs  mod.rs  pawn.rs  shape.rs  tile_coord.rs
octo_board_plugin/src/resources/: mod.rs  tile.rs  tile_map.rs
resources/: .gitignore  goblins.json
src/: board.rs  brain.rs  game.rs  grid.rs  main.rs  pawn.rs  resources.tar  shape_style.rs  textures.rs  tiles.rs  ui.rs  utils.rs
src/game_states/: game_over_state.rs  in_game_state.rs  menu_state.rs  mod.rs
