[package]
name = "octo_chess"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good-web-game = "0.5.0"
glam = { version = "0.21.3", features = ["mint"] }
fixed_trigonometry = "0.3.5"
aseprite = "0.1.3"
serde_json = "1.0.85"
