[package]
name = "octo_chess"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["octo_board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.8.1"

# Mesh selection
bevy_mod_picking = "0.9"

# Console Debug
# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.13.0", optional = true }

octo_board_plugin = { path = "octo_board_plugin" }

[workspace]
members = [
    "octo_board_plugin"
]

resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
