[package]
name = "octo_board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
# Engine
bevy = {version = "0.9.0"}

# Serialization
serde = "1.0.145"

# Random
random = "0.12.2"

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.14.0", optional = true }

bevy_mod_picking = "0.10.0"
